Fixed positioning of TK with relative positioning. The TK should no longer overlap toshi on the home page on smaller phones (iphone 12 mini)

--- a/frontend/src/App/styles/layout/_containers.scss
+++ b/frontend/src/App/styles/layout/_containers.scss
@@ -51,7 +51,10 @@
 .home {
 	&__container {
         &--left {
-            @include flexCenterCenter($flex-direction: column, $align-items: flex-start);
+			@include flexCenterCenter($flex-direction: column, $align-items: flex-start);
+			position: absolute;
+			// left: 45rem;
+            top: 35rem;
         }
 
         &--right {
@@ -60,8 +63,12 @@
             z-index: 1;
             position: absolute;
             left: 65%;
-            left: 60vw;
-            top: 30vh;
+            left: 50vw;
+			top: 28.5rem;
+			
+			@media (max-width: 950px) {
+				left: 55vw;
+			}
         }
     }
 }
